--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Patient Monitoring System</string>
     <string name="hello">Hello</string>
-    <string name="dummy_name">John Doe</string>
     <string name="user_image">user_image</string>
     <string name="home">Home</string>
     <string name="settings">Settings</string>
@@ -54,4 +53,24 @@
     <string name="save">SAVE</string>
     <string name="change_photo">CHANGE PHOTO</string>
     <string name="fullname">FullName</string>
+    <string name="sign_up_as_a">Sign Up as a</string>
+    <string name="doctor">Doctor?</string>
+    <string name="sign_in_to_your_account">Sign in to your account</string>
+    <string name="email">Email</string>
+    <string name="your_example_com">your@example.com</string>
+    <string name="password">Password</string>
+    <string name="password_hint">• • • • • •</string>
+    <string name="sign_in">sign in</string>
+    <string name="don_t_have_an_account">Don\'t have an Account?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="a_few_details">We need a few details to get your account ready</string>
+    <string name="fisrt_name">Fisrt Name</string>
+    <string name="dummy_name">John</string>
+    <string name="last_name">Last Name</string>
+    <string name="dummy_name2">Doe</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="already_have_an_account">Already Have an Account?</string>
+    <string name="hospital">Hospital</string>
+    <string name="dummy_hospital">John Hopkins Hospital</string>
+    <string name="gender">Gender</string>
 </resources>
