--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,14 +37,14 @@
     <string name="profile">PROFILE</string>
     <string name="dummy_bd">06/07/1990</string>
     <string name="dummy_gender">Male</string>
-    <string name="name_">NAME:</string>
-    <string name="birhtday_">BIRHTDAY:</string>
-    <string name="gender_">GENDER:</string>
-    <string name="age_">AGE:</string>
-    <string name="phone_number_">PHONE NUMBER:</string>
+    <string name="name_">Name:</string>
+    <string name="birhtday_">Date Of Birth:</string>
+    <string name="gender_">Gender:</string>
+    <string name="age_">Age:</string>
+    <string name="phone_number_">Number:</string>
     <string name="change_profile_details">CHANGE PROFILE DETAILS</string>
     <string name="sign_out">SIGN OUT</string>
-    <string name="birthday">Birthday</string>
+    <string name="birthday">Date Of Birth</string>
     <string name="gender">Gender</string>
     <string name="age">Age</string>
     <string name="find_hospital_nearby">FIND HOSPITAL NEARBY</string>
@@ -72,5 +72,4 @@
     <string name="already_have_an_account">Already Have an Account?</string>
     <string name="hospital">Hospital</string>
     <string name="dummy_hospital">John Hopkins Hospital</string>
-    <string name="gender">Gender</string>
 </resources>
