--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Patient Monitoring System</string>
+    <string name="app_name">Mobidoc</string>
     <string name="hello">Hello</string>
     <string name="user_image">user_image</string>
     <string name="home">Home</string>
@@ -82,4 +82,7 @@
     <string name="specialization">Specialization</string>
     <string name="issue">Issue</string>
     <string name="notifications">Notifications</string>
+    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
+    <string name="patients">PATIENTS</string>
+    <string name="notification">Notification</string>
 </resources>
