some few changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mobidoc</string>
+    <string name="app_name">Carditect</string>
     <string name="hello">Hello</string>
     <string name="user_image">user_image</string>
     <string name="home">Home</string>
